Fix and finalize the mobile app and web page
